:sparkles: today-test AOT